cleaned up some unneeded code, fixed footer spacing

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -110,6 +110,9 @@
         }
     }
 }
+.footerclear{
+	height:1px;
+}
 
 .footerLogo {
     width: 200px;
